# mesh_averaging

./: CMakeLists.txt
src/: main.cpp
